syntax = "proto3";

option csharp_namespace = "IdentityServer.Protos";

package IdentityServer;

service Identity {
  rpc GetEmployees (GetEmployeesRequest) returns (GetEmployeesResponse);
  rpc CreateEmployee (CreateEmployeeRequest) returns (CreateEmployeeResponse);
}

message GetEmployeesRequest {
  string companyId = 1;
}

message GetEmployeesResponse {
  repeated Employee employees = 1;
}

message CreateEmployeeRequest {
  string name = 1;
  string email = 2;
  string companyId = 3;
  string warehouseId = 4;
  string password = 5;
}

message CreateEmployeeResponse {
  bool success = 1;
  repeated string message = 2;
}

message Employee {
  string id = 1;
  string name = 2;
  string email = 3;
  string companyId = 4;
  string warehouseId = 5;
  string warehouseName = 6;
  string role = 7;
}
